--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>REPLACE ME</title>
+		<title>We begin with only one</title>
 		<style>
 			body {
 				background-color: rgb(200,200,200);
@@ -15,6 +15,6 @@
 	<body>
 		<h1>REPLACE ME</h1>
 		<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde"></canvas>
-    <p>REPLACE ME</p>
+    <p>Just wait...</p>
 	</body>
 </html>
