--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>We begin with only one</title>
+		<title>Give me an A</title>
 		<style>
 			body {
 				background-color: rgb(200,200,200);
@@ -13,7 +13,7 @@
 		<script src="processing.min.js"></script>
 	</head>
 	<body>
-		<h1>REPLACE ME</h1>
+		<h1>We begin with only one</h1>
 		<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde"></canvas>
     <p>Just wait...</p>
 	</body>
